--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "SAHAS-MD",
+  "name": "HYPER-MD",
   "version": "1.0.0",
-  "description": "SAHAS-MD MULTI DEVICE WHATSAPP BOT BY SAHAS TECH",
+  "description": "HYPER-MD MULTI DEVICE WHATSAPP BOT BY SAHAS TECH",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name SAHAS-MD",
-    "stop": "pm2 stop SAHAS-MD",
-    "restart": "pm2 restart SAHAS-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name HYPER-MD",
+    "stop": "pm2 stop HYPER-MD",
+    "restart": "pm2 restart HYPER-MD"
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
